vlib/v/checker/tests/multi_return_option_not_set_err.vv
a, b := 'fdf:df:'.split_once(',')
println(a)
println(b)
